--- a/package.json
+++ b/package.json
@@ -3,15 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "async": "^2.6.2",
+    "axios": "^0.18.0",
+    "compression": "^1.7.4",
+    "eslint-config-airbnb": "^17.1.0",
+    "express": "^4.16.4",
+    "express-minify": "^1.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react-redux": "^7.0.2",
+    "react-router": "^5.0.0",
+    "redux": "^4.0.1",
+    "redux-async-await": "^1.0.1",
+    "redux-async-render": "^0.2.2",
+    "redux-logger": "^3.0.6",
+    "redux-promise": "^0.6.0",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "ssr": "set NODE_ENV=development && node start-server.js",
+    "ssrapp": "node_modules/.bin/babel ./src -d ./bundle"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -21,5 +36,30 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.5",
+    "babel-plugin-css-in-js": "^1.5.1",
+    "babel-plugin-css-modules-transform": "^1.6.2",
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "css-loader": "^2.1.1",
+    "file-loader": "^3.0.1",
+    "html-webpack-exclude-assets-plugin": "0.0.7",
+    "ignore-loader": "^0.1.2",
+    "node-sass": "^4.11.0",
+    "npm-run-all": "^4.1.5",
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "^2.1.8",
+    "redux-devtools": "^3.5.0",
+    "style-loader": "^0.23.1",
+    "to-string-loader": "^1.1.5",
+    "url-loader": "^1.1.2"
+  }
 }
